log
Wed 27 Mar 2024 06:00:23 PM UTC: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
946fe62
Wed 27 Mar 2024 06:00:25 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e69549d
Wed 27 Mar 2024 06:01:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: expected ‘;’ before ‘return’
   36 |      return lista;
      |      ^~~~~~
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
list.c: In function ‘createList’:
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a7e2a3b
Wed 27 Mar 2024 06:01:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:68: error: lvalue required as left operand of assignment
   48 |     if(list==  NULL || list->current==NULL || list -> current->next=NULL){
      |                                                                    ^
Compilation failed
247f869
Wed 27 Mar 2024 06:02:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fd8332e
Wed 27 Mar 2024 06:02:47 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
a658428
Wed 27 Mar 2024 06:07:11 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
list.c:83:1: error: expected identifier or ‘(’ before ‘}’ token
   83 | }
      | ^
Compilation failed
c26cd8d
Wed 27 Mar 2024 06:07:26 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
f5fa8b3
Wed 27 Mar 2024 06:16:23 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
list.c:104:32: error: expected ‘;’ before ‘}’ token
  104 |       list->current = nuevoNODO
      |                                ^
      |                                ;
  105 |     }
      |     ~                           
Compilation failed
710ade4
Wed 27 Mar 2024 06:16:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
47a59fe
Wed 27 Mar 2024 06:16:57 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:121:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  121 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:112:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  112 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4389b61
Wed 27 Mar 2024 06:17:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:31: error: ‘null’ undeclared (first use in this function)
   98 |       if(list->current->next!=null){
      |                               ^~~~
list.c:98:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a65c488
Wed 27 Mar 2024 06:18:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
2dc4036
Wed 27 Mar 2024 06:24:52 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:121:23: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  121 |     void * data =list-current->data;
      |                       ^~~~~~~
      |                       popCurrent
list.c:121:23: note: each undeclared identifier is reported only once for each function it appears in
list.c:122:5: error: unknown type name ‘node’; did you mean ‘Node’?
  122 |     node *nodeToRemove = list->current;
      |     ^~~~
      |     Node
list.c:122:26: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
  122 |     node *nodeToRemove = list->current;
      |                          ^~~~
list.c:125:10: error: expected expression before ‘}’ token
  125 |     }else}
      |          ^
list.c:122:11: error: unused variable ‘nodeToRemove’ [-Werror=unused-variable]
  122 |     node *nodeToRemove = list->current;
      |           ^~~~~~~~~~~~
list.c:121:12: error: unused variable ‘data’ [-Werror=unused-variable]
  121 |     void * data =list-current->data;
      |            ^~~~
list.c: At top level:
list.c:126:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  126 |         list->head=list->current->next;
      |             ^~
list.c:127:5: error: expected identifier or ‘(’ before ‘}’ token
  127 |     }
      |     ^
list.c:128:5: error: expected identifier or ‘(’ before ‘if’
  128 |     if(list->current->next!=NULL){
      |     ^~
list.c:130:6: error: expected identifier or ‘(’ before ‘else’
  130 |     }else{
      |      ^~~~
list.c:133:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  133 |     list->current=list->current->next;
      |         ^~
list.c:134:5: error: data definition has no type or storage class [-Werror]
  134 |     free(nodeToRemove);
      |     ^~~~
list.c:134:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
list.c:134:5: error: parameter names (without types) in function declaration [-Werror]
list.c:134:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:5:
list.c:135:1: error: expected identifier or ‘(’ before ‘}’ token
  135 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:125:10: error: control reaches end of non-void function [-Werror=return-type]
  125 |     }else}
      |          ^
cc1: all warnings being treated as errors
Compilation failed
eccf611
Wed 27 Mar 2024 06:27:19 PM UTC: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  12|0
total_score: 70/70
cd69dfd
